# Humanoid-robotics-book

./: .env.example  .gitignore  .test-auth-flow.js  CLAUDE.md  DOCS.md  Dockerfile  README.auth.md  README.md  TESTING.md  api-reference.md  auth_integration.py  deployment.md  docusaurus.config.ts  integration_test_results.json  package-lock.json  package.json  pyproject.toml  quickstart.md  railway.json  requirements.txt  server.js  sidebars.ts  start_server.sh  success_criteria_verification.json  test-authentication-features.js  verify_local.py
.claude/: settings.local.json
.claude/agents/: rag-system-expert.md
.github/workflows/: deploy.yml  wcag.yml
.railway/: README.md
.space/: Dockerfile  README.md  app.yaml
.specify/memory/: constitution.md
docs/: authentication-api.md
docs/appendices/: 00-glossary.mdx
docs/capstone/: 00-autonomous-humanoid.mdx  01-next-steps.mdx
docs/hardware-requirements/: 00-workstation.mdx  01-edge-kit.mdx  02-robot-options.mdx  03-cloud-fallback.mdx
docs/intro/: 00-index.mdx  01-learning-outcomes.mdx  02-getting-started.mdx
docs/module-1-ros2/: 00-overview.mdx  01-hello-ros.mdx  02-key-concepts.mdx
docs/module-2-digital-twin/: 00-overview.mdx  01-spawn-robot.mdx  02-sensors-sim.mdx
docs/module-3-isaac/: 00-overview.mdx  01-isaac-setup.mdx  02-perception-pipeline.mdx
docs/module-4-vla/: 00-overview.mdx  01-whisper-gpt-stub.mdx  02-openvla-intro.mdx
history/adr/: 0001-ros-2-distribution-choice.md
specs/001-beginner-humanoid-textbook/: plan.md  spec.md  tasks.md
src/: agent.py  chatkit_integration.md  config.py  db.py  embed_book.py  main.py  qdrant_client.py  rate_limiter.py  retrieval.py  utils.py
static/: chatkit-widget.js
tests/: verify_success_criteria.py
(+74 files in other folders)
